---
source: compiler-core/src/parse/tests.rs
expression: "let x = [1, 2, 3, ..]"
---
----- SOURCE CODE
let x = [1, 2, 3, ..]

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:19
  │
1 │ let x = [1, 2, 3, ..]
  │                   ^^ I was expecting a value after this spread

If a list expression has a spread then a tail must also be given.
